[gd_scene load_steps=3 format=3 uid="uid://bru5npcu535d3"]

[ext_resource type="Script" uid="uid://b2krwym46v2e3" path="res://scenes/UI/main_menu.gd" id="1_qwnig"]
[ext_resource type="Theme" uid="uid://cyr8w7bxof0cp" path="res://Themes/default.tres" id="2_yonvy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 85.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.194105, 0.276436, 0.319789, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuickPlay" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yonvy")
theme_type_variation = &"CustomButtons"
theme_override_font_sizes/font_size = 16
text = "Quick Play"

[node name="ServerBrowser" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yonvy")
theme_type_variation = &"CustomButtons"
theme_override_font_sizes/font_size = 16
text = "Server Browser"

[node name="Settings" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yonvy")
theme_type_variation = &"CustomButtons"
theme_override_font_sizes/font_size = 16
text = "Settings"

[node name="Quit" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_yonvy")
theme_type_variation = &"CustomButtons"
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="Username" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -74.0
offset_right = 125.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_yonvy")
theme_type_variation = &"CustomLineEdits"
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter username..."
alignment = 1

[node name="Header" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 148.0
grow_horizontal = 2
color = Color(0.319603, 0.435155, 0.496241, 1)

[node name="MainHeaderLabel" type="Label" parent="Header"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.0
offset_top = -33.5
offset_right = 397.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yonvy")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 48
text = "NEBULA v0.7 | Multiplayer Update"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BG/VBoxContainer/QuickPlay" to="." method="_on_quick_play_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/ServerBrowser" to="." method="_on_server_browser_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/Quit" to="." method="_on_button_2_pressed"]
[connection signal="text_changed" from="Username" to="." method="_on_username_text_changed"]
